# personal_finance_tracker

./: .gitignore  AGENTS.md  README.md  app.py  backup.ps1  generate_user.py  pyproject.toml  requirements.txt  seed_expenses.py  test.py
.opencode/SKILLS/finance-dashboard-analytics/: SKILL.md
.opencode/SKILLS/finance-dashboard-analytics/references/: charts.md  sql_queries.md
.opencode/SKILLS/project-organiser/: SKILL.md
.opencode/commands/: create-spec.md  seed-expense.md  seed-user.md
.opencode/specs/: 01-login.md  02-login-and-logout.md  03-profile-page-design.md  03-profile-page-design_default.md  03-profile-page-style-css.md  04-profile-redesign.md  landing_html.md
.opencode/specs/database/: database_specs.md
Database/: auth.py  config.py  db.py
Schemas/: category.py  expense.py  user.py
docs/backup/: backup-plan.md
docs/changes/: reorganisation-report.md
docs/implemented_plans/: 03-profile-page-design.md
implimented_plans/: 04-finance-dashboard-analytics.md  05-dashboard-table-pagination-filter.md
plans/flask_app/: app-route-plan.md  main.md
plans/website/: main.md
src/: app.py
src/features/auth/: routes.py  service.py
src/features/expenses/: routes.py
src/features/profile/: routes.py
src/shared/: config.py  db.py
src/static/css/: profile.css
src/static/js/: profile.js
src/templates/: index.html  landing.html  profile.html
static/: main.js  main_profile.js  style.css
templates/: index.html  profile.html
tests/: test_app.py
