[project]
name = "expense-tracker"
version = "0.1.0"
description = "Personal expense tracker application"
requires-python = ">=3.10"
dependencies = [
    "werkzeug",
    "python-dotenv",
    "flask",
    "jinja2",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_app.py"]
